k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
        resources:
          requests:
            memory: "512Mi"  # Minimum memory requested for MongoDB
            cpu: "500m"      # Minimum CPU requested for MongoDB
          limits:
            memory: "1Gi"    # Maximum memory allowed for MongoDB
            cpu: "1"         # Maximum CPU allowed for MongoDB
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
